--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,29 @@
 #container{
 	outline: 1px solid;
-	width: 500px;
-	height: 500px;
+	width: 600px;
+	height: 600px;
 	margin: 0 auto;
 	overflow: hidden;
 	position: relative;
-	top: 60px;
+	top: 10px;
 }
 
 .cell{
-	width: 50px;
-	height: 50px;
-	outline: 1px solid;
+	width: 30px;
+	height: 30px;
+
 	margin: 0;
+	padding: 0;
 	float: left;
 	background-color: #fff;
+}
+
+body{
+	text-align: center;
+}
+
+input{
+	padding: 10px;
+	border: none;
+	font-size: 13pt;
 }
